--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,10 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
+#huge_image{
+  width: 100%;
+  height: 100px;
+  background-image: url("../images/AOTC-Parvovirus-1920x1080.jpg");
+  background-repeat: no-repeat;
+}
+
+
 body {
-  padding:50px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   font-weight:300;
+  margin: 0px;
+  padding: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -47,7 +56,7 @@ a small {
 
 .wrapper {
   width:860px;
-  margin:0 auto;
+  margin:50px auto;
 }
 
 blockquote {
