tweak for images on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,6 +5,7 @@
   height: 100px;
   background-image: url("../images/AOTC-Parvovirus-1920x1080.jpg");
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 
